# loggerinho

./: .gitignore  CMakeLists.txt  README.md
cmake/: LoggerConfig.cmake.in
example/: CMakeLists.txt  example.cc
include/core/: ITime_provider.h  enricher_factory.h  log_manager.h  log_record.h  logger.h  system_time_provider.h
include/enrichers/: IEnricher.h  base_enricher.h  enricher_flags.h  timestamp_enricher.h
include/filters/: IFilter.h  LevelFilter.h  NameFilter.h
include/formatters/: IFormatter.h  json_formatter.h  plain_text_formatter.h
include/sinks/: ILog_sink.h  buffered_sink.h  console_sink.h  file_sink.h
src/: stub.cc
src/filters/: stub.cc
src/formatters/: json_formatter.cc
src/sinks/: buffered_sink.cc  console_sink.cc  file_sink.cc
tests/: CMakeLists.txt
tests/core/: log_manager_test.cc  logger_test.cc
tests/enrichers/: enricher_factory_test.cc  timestamp_enricher_test.cc
tests/filters/: level_filter_test.cc  name_filter_test.cc
tests/formatters/: json_formatter_test.cc  plain_text_formatter_test.cc
tests/mocks/: mock_enricher.h  mock_filter.h  mock_formatter.h  mock_log_sink.h  mock_time_provider.h
tests/sinks/: buffered_sink_test.cc  console_sink_test.cc  file_sink_test.cc
